--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/lcd11001/react_ssr#readme",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
