--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.20.0",
+    "graphql": "^15.3.0",
     "next": "^9.5.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "^16.13.1",
